# node_viewer

./: Cargo.toml  README.md  index.html  node_viewer.js  node_viewer_bg.wasm
.github/workflows/: rust.yml
ai/key-information/: 1_overview.md
ai/plans/: 11-recognise-a-file-as-xml-and-display-the-name-of-the-root-node.md  13-display-all-elements-of-an-xml-file-in-a-linear-list.md  15-display-the-node-tree-on-the-left-and-the-text-on-the-right.md  17-create-ui-widget-for-displaying-an-xml-element.md  2-ability-to-open-a-file-in-the-app.md
src/: app.rs  file_loading.rs  lib.rs  main.rs  xml_parsing.rs
src/init/: mod.rs  native.rs  web.rs
