[package]
name = "node_viewer"
version = "0.1.0"
authors = ["Dan Reed <dan@reedo.dev>"]

include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

edition = "2024"
resolver = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc", "wasm32-unknown-unknown"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


# ---------------------------------------------------- SHARED DEPS -----------------------------------------------------
[dependencies]
anyhow = "1"
egui = "0.32"
log = "0.4"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }


# ----------------------------------------------------- NATIVE DEPS ----------------------------------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
env_logger = "0.11"


# ------------------------------------------------------ WEB DEPS ------------------------------------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "Blob",
    "BlobPropertyBag",
    "Url"
] }
